# sudoku_solver

./: CMakeLists.txt  README.md  launch.mk  test_sudoku.sh
data/: sudoku_test_1.sudoku  sudoku_test_10.sudoku  sudoku_test_11.sudoku  sudoku_test_2.sudoku  sudoku_test_3.sudoku  sudoku_test_4.sudoku  sudoku_test_5.sudoku  sudoku_test_6.sudoku  sudoku_test_7.sudoku  sudoku_test_8.sudoku  sudoku_test_9.sudoku  sudoku_test_complete.sudoku  sudoku_test_extreme.sudoku
include/: cnode.hpp  sudoku_solver.hpp
src/: sudoku_solver.cpp
